@@ -32,12 +32,12 @@ void AlarmSettingsDayButton::render() {
 }
 
 uint8_t AlarmSettingsDayButton::getWidth() {
-	return TTGOClass::getWatch()->tft->width() / 5;
+	return RESOLUTION_WIDTH / 5;
 }
 
 
 uint8_t AlarmSettingsDayButton::getPosX() {
-	return (TTGOClass::getWatch()->tft->width() - (this->day >= 4 ? 3 : 4) * (this->getWidth() + 10) ) / 2
+	return (RESOLUTION_WIDTH - (this->day >= 4 ? 3 : 4) * (this->getWidth() + 10) ) / 2
 	+ ((this->day % 4) * (this->getWidth() + 10));
 }
 
