@@ -20,7 +20,7 @@ void ProgressBar::render(int32_t value) {
 		TTGOClass::getWatch()->tft->fillRect(
 			0,
 			this->y,
-			TTGOClass::getWatch()->tft->width(),
+			RESOLUTION_WIDTH,
 			40,
 			COLOR_BACKGROUND
 		);
@@ -31,7 +31,7 @@ void ProgressBar::render(int32_t value) {
 		TTGOClass::getWatch()->tft->drawString(txt, 15, this->y);
 		Display::getInstance()->resetTypographySettings();
 		TTGOClass::getWatch()->tft->fillCircle(BAR_START, this->y + 20, BAR_HEIGHT / 2, this->color);
-		int32_t width = TTGOClass::getWatch()->tft->width() - BAR_START - 20;
+		int32_t width = RESOLUTION_WIDTH - BAR_START - 20;
 		TTGOClass::getWatch()->tft->fillRect(
 			BAR_START + 2,
 			this->y + BAR_HEIGHT - 1,
