@@ -77,8 +77,8 @@ void CyberWatch::setRunMode(uint8_t mode) {
 	TTGOClass::getWatch()->tft->fillRect(
 		0,
 		0,
-		TTGOClass::getWatch()->tft->width(),
-		TTGOClass::getWatch()->tft->height(),
+		RESOLUTION_WIDTH,
+		RESOLUTION_HEIGHT,
 		COLOR_BACKGROUND
 	);
 	this->runMode->switchedTo();
