@@ -8,15 +8,15 @@ void Logo::render() {
 
 	TTGOClass::getWatch()->tft->drawString(
 		APP_NAME,
-			(TTGOClass::getWatch()->tft->width() - TTGOClass::getWatch()->tft->textWidth(APP_NAME)) / 2,
-			(TTGOClass::getWatch()->tft->height() / 2 )- TTGOClass::getWatch()->tft->fontHeight()
+			(RESOLUTION_WIDTH - TTGOClass::getWatch()->tft->textWidth(APP_NAME)) / 2,
+			(RESOLUTION_HEIGHT / 2 )- TTGOClass::getWatch()->tft->fontHeight()
 		);
 
 		TTGOClass::getWatch()->tft->setTextSize(2);
 		TTGOClass::getWatch()->tft->drawString(
 			APP_VERSION,
-		(TTGOClass::getWatch()->tft->width() - TTGOClass::getWatch()->tft->textWidth(APP_VERSION)) / 2,
-        TTGOClass::getWatch()->tft->height() / 2
+		(RESOLUTION_WIDTH - TTGOClass::getWatch()->tft->textWidth(APP_VERSION)) / 2,
+        RESOLUTION_HEIGHT / 2
 	);
 };
 
