@@ -47,3 +47,6 @@
 
 #define BATTERY_FULL_CAPACITY 4200
 #define BATTERY_LOW_CAPACITY 3100
+
+#define RESOLUTION_WIDTH 240
+#define RESOLUTION_HEIGHT 240
